examples/invalid/DataRepresentationInvalid.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

@data_representation(FOO)
struct BadRep {
    int32_t x;
};

